# nonebot-plugin-argot

./: .gitignore  .pre-commit-config.yaml  README.md  bot.py  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: publish.yml
example/: .env  .gitignore  pyproject.toml
example/plugins/: demo.py  utils.py
nonebot_plugin_argot/: __init__.py  config.py  data_source.py  event.py  extension.py  hook.py  matcher.py  message.py  model.py  segment.py  typing.py  utils.py
nonebot_plugin_argot/adapters/: discord.py  dodo.py  feishu.py  kaiheila.py  onebot_v11.py  onebot_v12.py  qq.py  red.py  satori.py  telegram.py  utils.py
nonebot_plugin_argot/migrations/: 1a4a86205503_first_revision.py  bb58fca761ea_msg_id_type.py  e63054f23a7e_fix.py
tests/: conftest.py  test_argot.py
